// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spread Sheet Frozen Tests custom tree mode should render correct frozen areas for custom grid mode 1`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]a-1[&]a-1-1[&]measure-1",
    "width": 99.66,
    "x": 199.32,
    "y": 0,
  },
  Object {
    "height": 30,
    "id": "root[&]a-1[&]a-1-1[&]a-1-1-1",
    "width": 99.66,
    "x": 199.32,
    "y": 30,
  },
  Object {
    "height": 60,
    "id": "root[&]a-1[&]a-1-1",
    "width": 99.66,
    "x": 99.66,
    "y": 0,
  },
  Object {
    "height": 60,
    "id": "root[&]a-1",
    "width": 99.66,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Spread Sheet Frozen Tests custom tree mode should render correct frozen areas for custom grid mode 2`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]a-3[&]measure-5",
    "width": 199.32,
    "x": 99.66,
    "y": 240,
  },
  Object {
    "height": 30,
    "id": "root[&]a-3",
    "width": 99.66,
    "x": 0,
    "y": 240,
  },
]
`;

exports[`Spread Sheet Frozen Tests custom tree mode should render correct frozen areas for custom grid mode with pagination 1`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]a-2[&]a-2-1",
    "width": 199.32,
    "x": 99.66,
    "y": 120,
  },
  Object {
    "height": 30,
    "id": "root[&]a-2[&]a-2-2[&]measure-3",
    "width": 99.66,
    "x": 199.32,
    "y": 150,
  },
  Object {
    "height": 60,
    "id": "root[&]a-2",
    "width": 99.66,
    "x": 0,
    "y": 120,
  },
  Object {
    "height": 30,
    "id": "root[&]a-2[&]a-2-2",
    "width": 99.66,
    "x": 99.66,
    "y": 150,
  },
]
`;

exports[`Spread Sheet Frozen Tests custom tree mode should render correct frozen areas for custom grid mode with pagination 2`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]a-3[&]a-3-2[&]measure-4",
    "width": 99.66,
    "x": 199.32,
    "y": 210,
  },
  Object {
    "height": 30,
    "id": "root[&]a-3[&]a-3-2",
    "width": 99.66,
    "x": 99.66,
    "y": 210,
  },
  Object {
    "height": 30,
    "id": "root[&]a-3",
    "width": 99.66,
    "x": 0,
    "y": 210,
  },
]
`;

exports[`Spread Sheet Frozen Tests custom tree mode should render correct frozen areas for custom tree mode 1`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]a-1",
    "width": 272,
    "x": 0,
    "y": 0,
  },
  Object {
    "height": 30,
    "id": "root[&]a-1[&]a-1-1",
    "width": 272,
    "x": 0,
    "y": 30,
  },
  Object {
    "height": 30,
    "id": "root[&]a-1",
    "width": 272,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Spread Sheet Frozen Tests custom tree mode should render correct frozen areas for custom tree mode 2`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]a-3[&]measure-5",
    "width": 272,
    "x": 0,
    "y": 420,
  },
  Object {
    "height": -90,
    "id": "root[&]a-3",
    "width": 272,
    "x": 0,
    "y": 420,
  },
]
`;

exports[`Spread Sheet Frozen Tests custom tree mode should render correct series frozen areas 1`] = `
Array [
  Object {
    "height": 60,
    "id": "1",
    "width": 80,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Spread Sheet Frozen Tests custom tree mode should render correct series frozen areas 2`] = `
Array [
  Object {
    "height": 30,
    "id": "3",
    "width": 80,
    "x": 0,
    "y": 420,
  },
]
`;

exports[`Spread Sheet Frozen Tests grid mode should render correct frozen areas when has no vertical scroll area 1`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]浙江省[&]杭州市",
    "width": 96,
    "x": 96,
    "y": 0,
  },
  Object {
    "height": 30,
    "id": "root[&]浙江省[&]绍兴市",
    "width": 96,
    "x": 96,
    "y": 30,
  },
  Object {
    "height": 60,
    "id": "root[&]浙江省",
    "width": 96,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Spread Sheet Frozen Tests grid mode should render correct frozen areas when has no vertical scroll area 2`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]四川省[&]乐山市",
    "width": 96,
    "x": 96,
    "y": 210,
  },
  Object {
    "height": 30,
    "id": "root[&]四川省",
    "width": 96,
    "x": 0,
    "y": 210,
  },
]
`;

exports[`Spread Sheet Frozen Tests grid mode should render correct frozen areas when has vertical scroll area 1`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]浙江省[&]杭州市",
    "width": 96,
    "x": 96,
    "y": 0,
  },
  Object {
    "height": 30,
    "id": "root[&]浙江省[&]绍兴市",
    "width": 96,
    "x": 96,
    "y": 30,
  },
  Object {
    "height": 60,
    "id": "root[&]浙江省",
    "width": 96,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Spread Sheet Frozen Tests grid mode should render correct frozen areas when has vertical scroll area 2`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]四川省[&]乐山市",
    "width": 96,
    "x": 96,
    "y": 210,
  },
  Object {
    "height": 30,
    "id": "root[&]四川省",
    "width": 96,
    "x": 0,
    "y": 210,
  },
]
`;

exports[`Spread Sheet Frozen Tests grid mode should render correct frozen areas with pagination 1`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]四川省[&]成都市",
    "width": 96,
    "x": 96,
    "y": 120,
  },
  Object {
    "height": 30,
    "id": "root[&]四川省[&]绵阳市",
    "width": 96,
    "x": 96,
    "y": 150,
  },
  Object {
    "height": 60,
    "id": "root[&]四川省",
    "width": 96,
    "x": 0,
    "y": 120,
  },
]
`;

exports[`Spread Sheet Frozen Tests grid mode should render correct frozen areas with pagination 2`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]四川省[&]乐山市",
    "width": 96,
    "x": 96,
    "y": 210,
  },
  Object {
    "height": 30,
    "id": "root[&]四川省",
    "width": 96,
    "x": 0,
    "y": 210,
  },
]
`;

exports[`Spread Sheet Frozen Tests grid mode should render correct series frozen areas 1`] = `
Array [
  Object {
    "height": 60,
    "id": "1",
    "width": 80,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Spread Sheet Frozen Tests grid mode should render correct series frozen areas 2`] = `
Array [
  Object {
    "height": 30,
    "id": "2",
    "width": 80,
    "x": 0,
    "y": 210,
  },
]
`;

exports[`Spread Sheet Frozen Tests pivot col header frozen should render correct frozen areas for row header frozen 1`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]家具[&]桌子[&]number",
    "width": 100,
    "x": 0,
    "y": 60,
  },
  Object {
    "height": 30,
    "id": "root[&]家具[&]桌子",
    "width": 100,
    "x": 0,
    "y": 30,
  },
  Object {
    "height": 30,
    "id": "root[&]家具",
    "width": 100,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Spread Sheet Frozen Tests pivot col header frozen should render correct frozen areas for row header frozen 2`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]办公用品[&]纸张[&]number",
    "width": 100,
    "x": 900,
    "y": 60,
  },
  Object {
    "height": 30,
    "id": "root[&]办公用品[&]纸张",
    "width": 100,
    "x": 900,
    "y": 30,
  },
  Object {
    "height": 30,
    "id": "root[&]办公用品",
    "width": 100,
    "x": 900,
    "y": 0,
  },
]
`;

exports[`Spread Sheet Frozen Tests pivot col header frozen should render correct frozen areas for row header is not frozen 1`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]家具[&]桌子[&]number",
    "width": 100,
    "x": 0,
    "y": 60,
  },
  Object {
    "height": 30,
    "id": "root[&]家具[&]桌子",
    "width": 100,
    "x": 0,
    "y": 30,
  },
  Object {
    "height": 30,
    "id": "root[&]家具",
    "width": 100,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Spread Sheet Frozen Tests pivot col header frozen should render correct frozen areas for row header is not frozen 2`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]办公用品[&]纸张[&]number",
    "width": 100,
    "x": 900,
    "y": 60,
  },
  Object {
    "height": 30,
    "id": "root[&]办公用品[&]纸张",
    "width": 100,
    "x": 900,
    "y": 30,
  },
  Object {
    "height": 30,
    "id": "root[&]办公用品",
    "width": 100,
    "x": 900,
    "y": 0,
  },
]
`;

exports[`Spread Sheet Frozen Tests tree mode should render correct frozen areas when has no vertical scroll area 1`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]浙江省",
    "width": 120,
    "x": 0,
    "y": 0,
  },
  Object {
    "height": 30,
    "id": "root[&]浙江省[&]杭州市",
    "width": 120,
    "x": 0,
    "y": 30,
  },
  Object {
    "height": 30,
    "id": "root[&]浙江省",
    "width": 120,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Spread Sheet Frozen Tests tree mode should render correct frozen areas when has no vertical scroll area 2`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]四川省[&]乐山市",
    "width": 120,
    "x": 0,
    "y": 270,
  },
  Object {
    "height": -90,
    "id": "root[&]四川省",
    "width": 120,
    "x": 0,
    "y": 270,
  },
]
`;

exports[`Spread Sheet Frozen Tests tree mode should render correct frozen areas when has vertical scroll area 1`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]浙江省",
    "width": 120,
    "x": 0,
    "y": 0,
  },
  Object {
    "height": 30,
    "id": "root[&]浙江省[&]杭州市",
    "width": 120,
    "x": 0,
    "y": 30,
  },
  Object {
    "height": 30,
    "id": "root[&]浙江省",
    "width": 120,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Spread Sheet Frozen Tests tree mode should render correct frozen areas when has vertical scroll area 2`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]四川省[&]乐山市",
    "width": 120,
    "x": 0,
    "y": 270,
  },
  Object {
    "height": -90,
    "id": "root[&]四川省",
    "width": 120,
    "x": 0,
    "y": 270,
  },
]
`;

exports[`Spread Sheet Frozen Tests tree mode should render correct frozen areas with pagination 1`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]浙江省[&]舟山市",
    "width": 120,
    "x": 0,
    "y": 120,
  },
  Object {
    "height": 30,
    "id": "root[&]四川省",
    "width": 120,
    "x": 0,
    "y": 150,
  },
  Object {
    "height": -90,
    "id": "root[&]浙江省",
    "width": 120,
    "x": 0,
    "y": 120,
  },
]
`;

exports[`Spread Sheet Frozen Tests tree mode should render correct frozen areas with pagination 2`] = `
Array [
  Object {
    "height": 30,
    "id": "root[&]四川省[&]绵阳市",
    "width": 120,
    "x": 0,
    "y": 210,
  },
  Object {
    "height": -30,
    "id": "root[&]四川省",
    "width": 120,
    "x": 0,
    "y": 210,
  },
]
`;

exports[`Spread Sheet Frozen Tests tree mode should render correct series frozen areas 1`] = `
Array [
  Object {
    "height": 60,
    "id": "1",
    "width": 80,
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Spread Sheet Frozen Tests tree mode should render correct series frozen areas 2`] = `
Array [
  Object {
    "height": 30,
    "id": "2",
    "width": 80,
    "x": 0,
    "y": 270,
  },
]
`;
